--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <img class="my-photo" src="./img/photo.jpg" alt="My photo">
                 <!--Contacts conteiner-->
                 <div class="contacts-conteiner">
-                    <h3 class="contacts-title">Зв'язок зі мною:</h3>
+                    <h3 class="contacts-title">Contact me:</h3>
                     <div>
                         <span class="contacts-link-title">C:</span> <a class="contacts-link"
                             href="tel:38 099 737 97 44">+38 099 737 97 44</a>
@@ -29,7 +29,7 @@
                 </div>
                 <!--Tech Skills conteiner-->
                 <div class="tech-skills-conteiner">
-                    <h3 class="tech-skills-title">Технічні навички</h3>
+                    <h3 class="tech-skills-title">Technical skills</h3>
                     <ul>
                         <li class="tech-skill-iten">
                             <span class="tech-skill-text">Word</span>
@@ -54,28 +54,28 @@
                 </div>
                 <!--Soft Skills conteiner-->
                 <div class="soft-skills-conteiner">
-                    <h3 class="soft-skills-title">Особисті навички</h3>
+                    <h3 class="soft-skills-title">Personal skills</h3>
                     <ul>
                         <li class="soft-skill-iten">
-                            <span class="soft-skills-text">Комунікабельність</span>
+                            <span class="soft-skills-text">Сommunication</span>
                         </li>
                         <li class="soft-skill-iten">
-                            <span class="soft-skills-text">Лідерські здібності</span>
+                            <span class="soft-skills-text">Leadership qualities</span>
                         </li>
                         <li class="soft-skill-iten">
-                            <span class="soft-skills-text">Стресостійкість</span>
+                            <span class="soft-skills-text">Stress resistance</span>
                         </li>
                         <li class="soft-skill-iten">
-                            <span class="soft-skills-text">Робота в команді</span>
+                            <span class="soft-skills-text">Teamwork</span>
                         </li>
                         <li class="soft-skill-iten">
-                            <span class="soft-skills-text">Відповідальність</span>
+                            <span class="soft-skills-text">Responsibility</span>
                         </li>
                         <li class="soft-skill-iten">
-                            <span class="soft-skills-text">Швидкість прийняття рішень</span>
+                            <span class="soft-skills-text">Speed of decision making</span>
                         </li>
                         <li class="soft-skill-iten">
-                            <span class="soft-skills-text">Швидка адаптація до змін</span>
+                            <span class="soft-skills-text">Quick adaptation to change</span>
                         </li>
                     </ul>
                 </div>
@@ -89,14 +89,14 @@
             <div>
                 <!--about me mein info-->
                 <div class="info-conteiner">
-                    <h2 class="my-developer">Адміністратор ресторану, готелю, туристичної фірми</h2>
-                    <h1 class="my-name">Марина Кулик</h1>
+                    <h2 class="my-developer">Manager, administrator, operator</h2>
+                    <h1 class="my-name">Maryna Kulyk</h1>
 
                     <!-- <p class="about-me"></p> -->
-                    <h4 class="my-place">Дата народження: <span class="my-color">02 грудня 1985р.</span> </h4>
-                    <h4 class="my-place">Адреса: <span class="my-color">м.Львів, Княгині Ольги 122а</span> </h4>
-                    <h4 class="my-place">Сімейний стан: <span class="my-color">Не заміжня</span> </h4>
-                    <h4 class="my-place">Дітей <span class="my-color">Немає</span> </h4>
+                    <h4 class="my-place">Date of birth: <span class="my-color">December 2, 1985</span> </h4>
+                    <h4 class="my-place">Address: <span class="my-color">Lviv, 122a Knyagyni Olhy Street</span> </h4>
+                    <h4 class="my-place">Marital status: <span class="my-color">Not married</span> </h4>
+                    <h4 class="my-place">Children <span class="my-color">None</span> </h4>
                 </div>
 
                 <!--projecp conteiner-->
@@ -126,78 +126,73 @@
                 <!--Work Experience-->
                 <div>
                     <div>
-                        <h3 class="work-exp">Досвід роботи</h3>
+                        <h3 class="work-exp">Experience</h3>
                         <!--Company1-->
-                        <h4 class="work-place">Куратор відділу керівників груп <span class="work-color">Туроператор
-                                Аккорд-тур</span> </h4>
-                        <span class="data">Вересень 2018 - Травень 2020 <span class="slesh">|</span> Львів </span>
+                        <h4 class="work-place">Curator of the group leaders department <span class="work-color">Tour operator Accord tour</span> </h4>
+                        <span class="data">September 2018 - October 2020 <span class="slesh">|</span> Lviv </span>
                         <ul>
-                            <li class="work-text">Навчання слухачів курсів Керівників туристичних груп</li>
-                            <li class="work-text">Проведення співбесід і набір працівників</li>
-                            <li class="work-text">Організація і контроль роботи команди керівників груп (~40чол)</li>
-                            <li class="work-text">Планування робочих графіків</li>
-                            <li class="work-text">Вирішення проблемних ситуацій і забезпечення професійного супроводу
-                                автобусних турів</li>
-                            <li class="work-text">Ведення відомостей заробітної оплати</li>
+                            <li class="work-text">Training of students of courses of Leaders of tourist groups</li>
+                            <li class="work-text">Conducting interviews and recruiting</li>
+                            <li class="work-text">Organization and control of the team of team leaders (~ 40 people)</li>
+                            <li class="work-text">Scheduling work schedules</li>
+                            <li class="work-text">Solving problem situations and providing professional support for bus tours</li>
+                            <li class="work-text">Maintaining payroll information</li>
                         </ul>
                     </div>
 
                     <div>
                         <!--Company2-->
-                        <h4 class="work-place">Керівник-супроводжуючий туристичних груп <span
-                                class="work-color">Туроператор
-                                Аккорд-тур</span> </h4>
-                        <span class="data">Березень 2016 - Вересень 2018 <span class="slesh">|</span> Львів </span>
+                        <h4 class="work-place">Guide-organizer of tourist groups <span
+                                class="work-color">Tour operator Accord tour</span> </h4>
+                        <span class="data">March 2016 - September 2018 <span class="slesh">|</span> Lviv </span>
                         <ul>
-                            <li class="work-text">Організація і супровід автобусних турів</li>
-                            <li class="work-text">Планування і дотримання необхідних маршрутів і таймінгів</li>
-                            <li class="work-text">Підготовка і інформаційне забезпечення туристів на маршруті</li>
-                            <li class="work-text">Розрахунок фінансової звітності автобусних турів</li>
+                            <li class="work-text">Organization and support of bus tours</li>
+                            <li class="work-text">Planning and adherence to the necessary routes and timings</li>
+                            <li class="work-text">Training and information support of tourists on the route</li>
+                            <li class="work-text">Financial statements of bus tours</li>
                         </ul>
                     </div>
 
                     <div>
                         <!--Company3-->
-                        <h4 class="work-place">Менеджер по роботі з персоналом <span class="work-color">ГРК Термінал
-                                А</span> </h4>
-                        <span class="data">Квітень 2015 - Березень 2016 <span class="slesh">|</span> Львів </span>
+                        <h4 class="work-place">HR Manager <span class="work-color">Hotel and restaurant complex Terminal A
+                                </span> </h4>
+                        <span class="data">April 2015 - March 2016<span class="slesh">|</span> Lviv </span>
                         <ul>
-                            <li class="work-text">Розробка стандартів обслуговування в ресторанному комплексі</li>
-                            <li class="work-text">Проведення співбесід, відбір і навчання персоналу</li>
-                            <li class="work-text">Планування робочих графіків і логістики розвозки персоналу</li>
-                            <li class="work-text">Ведення особочих справ і медичних книжок персоналу</li>
-                            <li class="work-text">Нарахування заробітної оплати персоналу, ведення відомостей</li>
+                            <li class="work-text">Development of service standards in the restaurant complex</li>
+                            <li class="work-text">Conducting interviews, selection and training of staff</li>
+                            <li class="work-text">Planning work schedules and logistics of personnel delivery</li>
+                            <li class="work-text">Keeping personal files and medical records of staff</li>
+                            <li class="work-text">Accrual of staff salaries, information maintenance</li>
                         </ul>
                     </div>
 
                     <div>
                         <!--Company4-->
-                        <h4 class="work-place">Адміністратор готельно-ресторанного комплексу <span
-                                class="work-color">Медовий Двір</span> </h4>
-                        <span class="data">Вересень 2013 - Квітень 2015 <span class="slesh">|</span> Славське </span>
+                        <h4 class="work-place">Administrator of the hotel and restaurant complex <span
+                                class="work-color">Medovy Dvir</span> </h4>
+                        <span class="data">September 2013 - April 2015 <span class="slesh">|</span> Slavske </span>
                         <ul>
-                            <li class="work-text">Прийом замовлень і бронювання гостей</li>
-                            <li class="work-text">Забезпечення злагодженої і безперебійної роботи комплексу</li>
-                            <li class="work-text">Підбір персоналу і планування робочих графіків</li>
-                            <li class="work-text">Робота з гостями в період проживання</li>
-                            <li class="work-text">Робота з сайтами бронювання і ведення сторінок комплексу в соціальних
-                                мережах</li>
-                            <li class="work-text">Проведення щомісячних інвентаризацій і розрахунок фінансової звітності
-                                комплексу</li>
+                            <li class="work-text">Reception of orders and reservation of guests</li>
+                            <li class="work-text">Organization of proper operation of the complex</li>
+                            <li class="work-text">Recruitment and scheduling</li>
+                            <!-- <li class="work-text">Робота з гостями в період проживання</li> -->
+                            <li class="work-text">Work with sites for booking and maintaining the pages of the complex in social networks</li>
+                            <li class="work-text">Carrying out monthly inventories and calculation of financial statements of the complex</li>
                         </ul>
                     </div>
-                    <p class="paragraf">В загальному більше 10 років досвіду роботи офіціанта, бармена, керуючого
+                    <!-- <p class="paragraf">В загальному більше 10 років досвіду роботи офіціанта, бармена, керуючого
                         рестораном (Карпати,
-                        Крим, Львів) </p>
+                        Крим, Львів) </p> -->
 
                 </div>
 
                 <!--Education-->
                 <div>
-                    <h3 class="education">Освіта</h3>
-                    <h4 class="university">Вінницький національний технічний університет</h4>
-                    <h5 class="profession">Промислова енергетика</h5>
-                    <span class="data">Вересень 2002 - Червень 2008 <span class="slesh">|</span> Україна</span>
+                    <h3 class="education">Education</h3>
+                    <h4 class="university">Vinnytsia National Technical University</h4>
+                    <h5 class="profession">Industrial energy</h5>
+                    <span class="data">September 2002 - June 2008 <span class="slesh">|</span> Ukraine</span>
                 </div>
             </div>
         </div>
