--- a/index.html
+++ b/index.html
@@ -90,13 +90,17 @@
                 <!--about me mein info-->
                 <div class="info-conteiner">
                     <h2 class="my-developer">Manager, administrator, operator</h2>
+                
                     <h1 class="my-name">Maryna Kulyk</h1>
 
-                    <!-- <p class="about-me"></p> -->
-                    <h4 class="my-place">Date of birth: <span class="my-color">December 2, 1985</span> </h4>
+                    <p class="about-me">
+                        I am hardworking, motivated, fast learner and very details oriented. 
+                        Looking for remote position due to Covid-19 situation.
+                    </p>
+                    <!-- <h4 class="my-place">Date of birth: <span class="my-color">December 2, 1985</span> </h4>
                     <h4 class="my-place">Address: <span class="my-color">Lviv, 122a Knyagyni Olhy Street</span> </h4>
                     <h4 class="my-place">Marital status: <span class="my-color">Not married</span> </h4>
-                    <h4 class="my-place">Children <span class="my-color">None</span> </h4>
+                    <h4 class="my-place">Children <span class="my-color">None</span> </h4> -->
                 </div>
 
                 <!--projecp conteiner-->
@@ -128,57 +132,57 @@
                     <div>
                         <h3 class="work-exp">Experience</h3>
                         <!--Company1-->
-                        <h4 class="work-place">Curator of the group leaders department <span class="work-color">Tour operator Accord tour</span> </h4>
+                        <h4 class="work-place"> Travel group leaders Curator <span class="work-color">Tour operator "Accord tour"</span> </h4>
                         <span class="data">September 2018 - October 2020 <span class="slesh">|</span> Lviv </span>
                         <ul>
-                            <li class="work-text">Training of students of courses of Leaders of tourist groups</li>
+                            <li class="work-text">Training new Leaders of tourist groups</li>
                             <li class="work-text">Conducting interviews and recruiting</li>
-                            <li class="work-text">Organization and control of the team of team leaders (~ 40 people)</li>
-                            <li class="work-text">Scheduling work schedules</li>
-                            <li class="work-text">Solving problem situations and providing professional support for bus tours</li>
-                            <li class="work-text">Maintaining payroll information</li>
+                            <li class="work-text">Team organization and management (~ 40 people)</li>
+                            <li class="work-text">Work scheduling</li>
+                            <li class="work-text">Problem solving and providing professional support for bus tours</li>
+                            <li class="work-text">Payroll management</li>
                         </ul>
                     </div>
 
                     <div>
                         <!--Company2-->
-                        <h4 class="work-place">Guide-organizer of tourist groups <span
-                                class="work-color">Tour operator Accord tour</span> </h4>
+                        <h4 class="work-place">Tourist groups guide and manager<span
+                                class="work-color"> Tour operator "Accord tour"</span> </h4>
                         <span class="data">March 2016 - September 2018 <span class="slesh">|</span> Lviv </span>
                         <ul>
-                            <li class="work-text">Organization and support of bus tours</li>
+                            <li class="work-text">Bus tours organization and support </li>
                             <li class="work-text">Planning and adherence to the necessary routes and timings</li>
                             <li class="work-text">Training and information support of tourists on the route</li>
-                            <li class="work-text">Financial statements of bus tours</li>
+                            <li class="work-text">Managing financial statements of bus tours</li>
                         </ul>
                     </div>
 
                     <div>
                         <!--Company3-->
-                        <h4 class="work-place">HR Manager <span class="work-color">Hotel and restaurant complex Terminal A
+                        <h4 class="work-place">HR Manager <span class="work-color">Hotel and restaurant complex "Terminal A"
                                 </span> </h4>
-                        <span class="data">April 2015 - March 2016<span class="slesh">|</span> Lviv </span>
+                        <span class="data">April 2015 - March 2016<span class="slesh"> |</span> Lviv </span>
                         <ul>
-                            <li class="work-text">Development of service standards in the restaurant complex</li>
-                            <li class="work-text">Conducting interviews, selection and training of staff</li>
-                            <li class="work-text">Planning work schedules and logistics of personnel delivery</li>
-                            <li class="work-text">Keeping personal files and medical records of staff</li>
-                            <li class="work-text">Accrual of staff salaries, information maintenance</li>
+                            <li class="work-text">Service standards development for restaurant complex</li>
+                            <li class="work-text">Conducting interviews, recruiting and newcomers training</li>
+                            <li class="work-text">Work schedules, delivery and logistics management</li>
+                            <li class="work-text">Payroll management</li>
+                        
                         </ul>
                     </div>
 
                     <div>
                         <!--Company4-->
-                        <h4 class="work-place">Administrator of the hotel and restaurant complex <span
-                                class="work-color">Medovy Dvir</span> </h4>
+                        <h4 class="work-place">Administrator <span
+                                class="work-color">Hotel and restaurant complex "Medovy Dvir"</span> </h4>
                         <span class="data">September 2013 - April 2015 <span class="slesh">|</span> Slavske </span>
                         <ul>
-                            <li class="work-text">Reception of orders and reservation of guests</li>
-                            <li class="work-text">Organization of proper operation of the complex</li>
+                            <li class="work-text">Orders and reservation management</li>
+                            <li class="work-text">Overall hotel and restaurant operations management</li>
                             <li class="work-text">Recruitment and scheduling</li>
                             <!-- <li class="work-text">Робота з гостями в період проживання</li> -->
-                            <li class="work-text">Work with sites for booking and maintaining the pages of the complex in social networks</li>
-                            <li class="work-text">Carrying out monthly inventories and calculation of financial statements of the complex</li>
+                            <li class="work-text">Managing content about hotel on hotel booking sites and social media presence</li>
+                            <li class="work-text">Monthly inventories and financial statements management</li>
                         </ul>
                     </div>
                     <!-- <p class="paragraf">В загальному більше 10 років досвіду роботи офіціанта, бармена, керуючого
